--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -88,7 +88,7 @@
             <div class="hero-content">
                 <h1>Intelligent news sentiment analysis</h1>
                 <p id="typing-text" class="mt-3 text-white" style="min-height: 40px;">
-                    <span id="cursor">|</span>
+                    <span id="cursor">&nbsp;</span>
                 </p>
             </div>
         </div>
