navbar link for share

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,7 +59,7 @@
 
                     <!-- My Share -->
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">My Share</a>
+                        <a class="nav-link text-white" href="{{ url_for('share') }}">My Share</a>
                     </li>
 
                     <!-- Logout -->
