--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,6 +65,11 @@
                         <a class="nav-link text-white" href="{{ url_for('share') }}">My Share</a>
                     </li>
 
+                    <!-- Statistics -->
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{{ url_for('stats') }}">Statistics</a>
+                    </li>
+
                     <!-- Logout -->
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{{ url_for('logout') }}">Logout</a>
