News category recognition

--- a/app/templates/visualize.html
+++ b/app/templates/visualize.html
@@ -19,6 +19,9 @@
             <h5 class="card-title">Detected Sentiment:</h5>
             <p class="card-text text-success fw-bold">{{ result }}</p>
 
+            <h5 class="card-title">Detected News Category:</h5>
+            <p class="card-text text-info fw-bold">{{ news_category }}</p>
+
             {% if emotion_scores %}
             <hr>
             <h5 class="card-title">Detected Emotions:</h5>
