Fixed small bugs in new model for better local execution and added more comments

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -3,9 +3,9 @@
 {% block title %}Homepage{% endblock %}
 
 {% block content %}
-<!-- 核心功能区 -->
+<!-- Core Functionality Area -->
 <section class="container-left">
-    <!-- 左侧导航栏 -->
+    <!-- Left Navigation Bar -->
     <div class="sidebar">
         <a href="#overview" class="active">Overview</a>
         <a href="#features">Features</a>
@@ -13,9 +13,9 @@
         <a href="#Applicable scenarios">Applicable scenarios</a>
     </div>
 
-    <!-- 右侧内容 -->
+    <!-- Right Content -->
     <div class="content">
-        <!-- 概述 -->
+        <!-- Overview -->
         <h2 id="overview">Purpose</h2>
         <p>
             This product uses text analysis technology to deeply mine data, extracting categories, classifications,
@@ -36,7 +36,7 @@
                 analysis to help individuals assess risks and opportunities.</li>
         </ul>
 
-        <!-- 功能 -->
+        <!-- Founction -->
         <h2 id="features">Features</h2>
         <div class="feature-section">
             <div class="feature-box">
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <!-- 好处 -->
+        <!-- Benefits -->
         <h2 id="benefits">Benefits</h2>
         <ul>
             <li><strong>Customer feedback insight:</strong><br>
@@ -81,11 +81,11 @@
             </li>
         </ul>
 
-        <!-- 适用场景 -->
+        <!-- Applicable scenarios -->
         <h2 id="Applicable scenarios">Applicable scenarios</h2>
         <div class="row g-4">
 
-            <!-- 场景1 -->
+            <!-- Applicable scenarios 1 -->
             <div class="col-md-4">
                 <div class="scene-card"
                     style="background-image: url('{{ url_for('static', filename='images/interview.webp') }}');">
@@ -96,7 +96,7 @@
                 </div>
             </div>
 
-            <!-- 场景2 -->
+            <!-- Applicable scenarios 2 -->
             <div class="col-md-4">
                 <div class="scene-card"
                     style="background-image: url('{{ url_for('static', filename='images/遥控.jpg') }}');">
@@ -107,7 +107,7 @@
                 </div>
             </div>
 
-            <!-- 场景3 -->
+            <!-- Applicable scenarios 3 -->
             <div class="col-md-4">
                 <div class="scene-card"
                     style="background-image: url('{{ url_for('static', filename='images/人物.jpg') }}');">
