Filter and observe the distribution of news categories

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -12,21 +12,33 @@
         <div class="mb-3">
             <label for="username" class="form-label">Username</label>
             {{ form.username(class_="form-control", placeholder="Choose a username") }}
+            {% for error in form.username.errors %}
+            <div class="text-danger">{{ error }}</div>
+            {% endfor %}
         </div>
 
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
             {{ form.email(class_="form-control", placeholder="Enter your email") }}
+            {% for error in form.username.errors %}
+            <div class="text-danger">{{ error }}</div>
+            {% endfor %}
         </div>
 
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             {{ form.password(class_="form-control", placeholder="Enter a password") }}
+            {% for error in form.username.errors %}
+            <div class="text-danger">{{ error }}</div>
+            {% endfor %}
         </div>
 
         <div class="mb-3">
             <label for="password2" class="form-label">Repeat Password</label>
             {{ form.password2(class_="form-control", placeholder="Repeat your password") }}
+            {% for error in form.username.errors %}
+            <div class="text-danger">{{ error }}</div>
+            {% endfor %}
         </div>
 
         <div class="d-grid">
